k8s/manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: go-app-service
#   labels:
#     app: go-app
# spec:
#   type: ClusterIP
#   selector:
#     app: go-app
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: go-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http 
  selector:
    app: go-app
  type: ClusterIP
